# combatenv

./: .bash_history  .gitignore  CHANGELOG.md  CLAUDE.md  PROJECT_FILES.md  README.md  example_integration.py  main.py  map.json  map.npz  map_editor.py  migration-plan.md  movement_training_env.py  preview_terrain.py  pyproject.toml  requirements.txt  standups.md  train_movement.py  train_multi_agent.py  train_tactical_movement.py
combatenv/: __init__.py  agent.py  boids.py  config.py  demo.py  environment.py  fov.py  gridworld.py  input_handler.py  map_editor.py  map_io.py  preview_terrain.py  projectile.py  renderer.py  spatial.py  strategic_env.py  strategic_grid.py  terrain.py  unit.py  wrapper_factory.py
diagnostics/: fov_analysis.py  measure_fps.py  profile_performance.py
docs/: API.md  ARCHITECTURE.md  CLAUDE.md  GETTING_STARTED.md  HISTORY.md  README.md  RENDERER_GUIDE.md  RENDERING_SUMMARY.md  TODO.md
models/: operational_agent.pkl  operational_agent_ep100.pkl  operational_agent_ep200.pkl  operational_agent_ep300.pkl  operational_agent_ep400.pkl  operational_agent_ep500.pkl  q_table_operational.pkl  q_table_operational_ep100.pkl  q_table_operational_ep200.pkl  q_table_operational_ep300.pkl  q_table_operational_ep400.pkl  waypoint_checkpoint_ep100.pkl  waypoint_qtables.pkl
tests/: __init__.py  test_agent.py  test_boids.py  test_environment.py  test_fov.py  test_gridworld.py  test_input_handler.py  test_integration.py  test_map_io.py  test_projectile.py  test_renderer.py  test_spatial.py  test_strategic_grid.py  test_terrain.py  test_unit.py
(+74 files in other folders)
