[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "combatenv"
version = "0.1.1"
description = "A Gymnasium-compatible multi-agent grid-world environment for combat simulation"
requires-python = ">=3.10"
dependencies = [
    "gymnasium",
    "noise",
    "numpy",
    "pygame",
]

[project.scripts]
combatenv-demo = "combatenv.demo:main"
combatenv-preview-terrain = "combatenv.preview_terrain:main"
combatenv-edit-terrain = "combatenv.map_editor:main"

[tool.setuptools.packages.find]
include = ["combatenv*"]
